# beanstalkd-rust

./: .gitignore  COMPATIBILITY_AUDIT.md  Cargo.toml  README.md  README.zh-CN.md  requirements-dev.txt
.github/workflows/: release.yml
cli/: Cargo.toml  README.md  README.zh-CN.md
cli/src/: args.rs  client.rs  commands.rs  error.rs  main.rs  protocol.rs  repl.rs  usage.rs
src/: config.rs  constants.rs  main.rs  model.rs  protocol.rs  server.rs  state.rs  wal.rs
tests/: conftest.py  test_cli.py  test_client_compat.py
