[package]
name = "beanstalkd"
version = "1.13.0-rust"
edition = "2021"

[workspace]
members = [".", "cli"]

[dependencies]
base64 = "0.22"
libc = "0.2"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["user"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
